[tool.poetry]
name = "fmlib"
version = "0.1.0"
description="Fleet Management Library"
authors = ["Argentina Ortega Sáinz"]

[tool.poetry.dependencies]
python = "^3.6"
inflection = "^0.3.1"
pymodm = "^0.4.1"
gunicorn = "19.9.0"
falcon = "^2.0.0"
empy = "^3.3.4"
python-dateutil = "^2.8.1"
numpy = "1.19.5"
icalendar = "^4.0.7"
ropod-common = {git = "https://github.com/kelo-robotics/ropod_common.git", rev = "develop"}
paho-mqtt = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.3"
pytest-cov = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
